--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ body {
 }
 
 main {
-    margin-top: 100px;
     margin-inline: auto;
+    margin-top: 50px;
     width: 80%;
     max-width: 400px;
     padding: 20px;
@@ -52,4 +52,15 @@ button {
 button:hover {
     filter: brightness(1.2);
     cursor: pointer;
+}
+
+#resposta {
+    margin-top: 30px;
+}
+
+#resposta div {
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.9;
+    margin-bottom: 10px;
 }
